--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </section>
 
-        /!-- Meetup times section -->
+        <!-- Meetup Times section -->
         <section id="meetups">
             <h2>Meet-up Times</h2>
             <div id="times">
